# openxmljsoncsv

./: .gitignore  Cargo.toml  README.md  SPEC.md  pyproject.toml
.github/workflows/: linux-appimage.yml  macos-dmg.yml  windows-installer.yml
crates/oxj-core/: Cargo.toml
crates/oxj-core/examples/: loadtime.rs
crates/oxj-core/src/: csv.rs  index.rs  json.rs  lazy.rs  lazy_csv.rs  lazy_xml.rs  lib.rs  mapping.rs  model.rs  search.rs  xml.rs
crates/oxj-gui/: Cargo.toml
crates/oxj-gui/src/: main.rs
crates/oxj-py/: Cargo.toml
crates/oxj-py/src/: lib.rs
docs/: BUILD.md  FEATURES.md  FEATURES_FULL.md  STATUS.md
packaging/: launcher.py  make_icons.sh  openxmljson.spec
packaging/icons/: OPENXMLJSON.icns
packaging/linux/: README.md  build_appimage.sh
packaging/macos/: README.md  build_universal2.sh  entitlements.plist  release.sh  sign_and_notarize.sh
packaging/windows/: openxmljson.iss
python/openxmljson/: __init__.py  __main__.py  activity.py  app.py  checkboxstyle.py  codeview.py  convert.py  csvtable.py  csvtableview.py  deepdive.py  diagram.py  diagramview.py  difftool.py  docview.py  edition.py  features.py  memory.py  model.py  project.py  query.py  schema.py  schemagen.py  styles.py  tail.py  tree.py  update.py  welcome.py  xmlhighlight.py
validators/: csv_port.py  index_port.py  json_port.py  run_all.py  test_batch2.py  test_diagram.py  test_highlight_span.py  test_parity_tools.py  test_project.py  test_qt_model.py  test_query.py  test_schemagen.py  test_tail.py  test_update.py  validate_csv.py  validate_json.py  validate_xml.py  xml_port.py
