[workspace]
resolver = "2"
members = ["crates/oxj-core", "crates/oxj-py", "crates/oxj-gui"]
default-members = ["crates/oxj-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://example.invalid/openxmljson"

[profile.release]
lto = "fat"
codegen-units = 1
